# task4.3

./: .gitignore  CMakeLists.txt  README.txt
app/: CMakeLists.txt
app/src/: main.c
app/tests/: CMakeLists.txt
app/tests/test_integration/: test_app.c
cmake/: MyFunctions.cmake
lib/: CMakeLists.txt  lib.def
lib/include/: lib_main.h
lib/src/: lib_main.c
lib/tests/: CMakeLists.txt
lib/tests/test_feature_a/: test_lib.c
